--- a/src/components/GridContainer/GridContainer.module.css
+++ b/src/components/GridContainer/GridContainer.module.css
@@ -1,30 +1,24 @@
 .GridContainer {
 	display: grid;
-	row-gap: 1rem;
+	row-gap: 2rem;
 	column-gap: 1rem;
-	margin: 2rem 2rem auto;
-	position: relative;
+	margin: 2rem 3rem auto;
 }
 
 @media only screen and (max-width: 500px) {
 	.GridContainer {
 		grid-template-columns: 1fr;
-		row-gap: 1rem;
 	}
 }
 
 @media only screen and (min-width: 501px) and (max-width: 1200px) {
 	.GridContainer {
 		grid-template-columns: repeat(3, 1fr);
-		row-gap: 1rem;
-		column-gap: 1rem;
 	}
 }
 
 @media only screen and (min-width: 1201px) {
 	.GridContainer {
 		grid-template-columns: repeat(4, 1fr);
-		row-gap: 1rem;
-		column-gap: 1rem;
 	}
 }
