--- a/src/components/MobileModal/MobileModal.module.css
+++ b/src/components/MobileModal/MobileModal.module.css
@@ -9,7 +9,6 @@
 }
 
 .outsideMobileMenu {
-	position: fixed;
 	top: 27%;
 	height: 100vh;
 	width: 100vh;
@@ -17,6 +16,8 @@
 
 .modalContainer {
 	border-top: 3px solid var(--sq-gold);
+	position: absolute;
+	z-index: 5;
 }
 .navItems li {
 	list-style: none;
